# SBot

./: .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
.github/workflows/: build_and_publish.yml  build_and_push_image.yaml  cross_compile.yml  cross_compile_and_publish.yml
src/: commands.rs  main.rs  search.rs
