[package]
name = "sbot"
version = "0.1.2"
authors = ["Nguyen Thai <shiroemon279@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.10", features = ["unstable_discord_api"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
eyre = "0.3"
color-eyre = "0.5"
dotenv = "0.15.0"
ddg = { git = "https://github.com/tk-nguyen/ddg" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
scraper = "0.13.0"
percent-encoding = "2.1.0"
log = "0.4"

[profile.release]
strip = true
