[package]
name = "sbot"
version = "0.1.14"
authors = ["Nguyen Thai <shiroemon279@gmail.com>"]
edition = "2021"

[dependencies]
serenity = { version = "0.11" }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
color-eyre = "0.5"
dotenvy = "0.15.7"
ddg = { git = "https://github.com/tk-nguyen/ddg" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.13.0"
percent-encoding = "2.1.0"

[profile.release]
strip = true
